# scanovich-infographic-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  double2Photo.md  promt nanobanana.md  pyproject.toml  start_bot.sh
scripts/: reset_user_requests.py
src/: __init__.py  config.py
src/bot/: __main__.py  main.py  middleware.py  states.py  storage.py
src/bot/handlers/: gen.py  photos.py  start.py  stats.py
src/cli/: __init__.py
src/services/: asr_client.py  gemini_client.py  llm_client.py
src/utils/: analytics.py  file_handler.py  prompt_builder.py
